# Proyect-Cars-ETL

./: .gitignore  EDA.ipynb  README.md  connection.py  cuaderno_compilado.ipynb  fact-dimensions.ipynb  main.py  pyproject.toml  requirements.txt
API/: EDA_API.ipynb  Extract.ipynb  apiCall.py  save_api-data.py
API/dags/: ETL-process.py  extractData.py  save_DB.py  streaming.py  transform.py
Dashboard/: eda.ipynb
Data/Clean/: cars_clean.csv  petroleum_clean.csv
Data/Dimensional_model/: area_dim.csv  car_dim.csv  details_dim.csv  fuel_fact.csv  product_dim.csv  rating_dim.csv  sells_fact.csv
Data/Fact tables/: dimension_vehiculo.csv
Data/Tablas de hechos/: dimension_ratings.csv  dimension_vendedor.csv  tabla_hechos.csv
Data/clean/: cars_clean.csv  petroleum_clean.csv
Data/raw/: petroleum_raw.csv
Dimensional_en_csv/: dimension_vehiculo.csv  dimension_vendedor.csv  tabla_hechos.csv
GX pruebas/: testin_extractData.ipynb  testin_transform_DimModel.ipynb
gx/expectations/: .ge_store_backend_id
src/: consumer.py  kafka_module.py  producer.py
